--- a/services/oidc/src/main/webapp/WEB-INF/web.xml
+++ b/services/oidc/src/main/webapp/WEB-INF/web.xml
@@ -21,8 +21,8 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     version="3.0" metadata-complete="true">
 
-    <description>WS Federation Spring Example</description>
-    <display-name>WS Federation Spring Example</display-name>
+    <description>Apache CXF Fediz OIDC service</description>
+    <display-name>Apache CXF Fediz OIDC service</display-name>
 	
 	<session-config>
 	    <cookie-config>
