--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <spring.security.version>3.2.10.RELEASE</spring.security.version>
         <tomcat7.version>7.0.75</tomcat7.version>
         <tomcat8.version>8.5.12</tomcat8.version>
-        <wss4j.version>2.1.9-SNAPSHOT</wss4j.version>
+        <wss4j.version>2.1.9</wss4j.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
