Enable secure cookies by default

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,7 @@ under the License.
 	<session-config>
 	    <cookie-config>
             <http-only>true</http-only>
+            <secure>true</secure>
         </cookie-config>
 		<tracking-mode>COOKIE</tracking-mode>
 	</session-config>
