--- a/services/oidc/src/main/webapp/WEB-INF/web.xml
+++ b/services/oidc/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,7 @@
 	<session-config>
 	    <cookie-config>
             <http-only>true</http-only>
+            <secure>true</secure>
         </cookie-config>
 		<tracking-mode>COOKIE</tracking-mode>
 	</session-config>
