Adding spring3 plugin + tests back in

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -38,6 +38,7 @@
       <module>jetty9</module>
       <module>spring</module>
       <module>spring2</module>
+      <module>spring3</module>
       <module>cxf</module>
    </modules>
    
