--- a/systests/webapps/springWebapp/pom.xml
+++ b/systests/webapps/springWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-webapps</artifactId>
-        <version>1.2.4</version>
+        <version>1.2.5-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
