--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -102,7 +102,7 @@
     <scm>
         <connection>scm:git:http://git-wip-us.apache.org/repos/asf/cxf-fediz.git</connection>
         <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/cxf-fediz.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>fediz-1.4.0</tag>
   </scm>
 
     <issueManagement>
