FEDIZ-201 - Spring3 plugin does not include jars in the distribution

--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -89,6 +89,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-spring3</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
             <artifactId>fediz-cxf</artifactId>
             <version>${project.version}</version>
         </dependency>
