--- a/services/oidc/pom.xml
+++ b/services/oidc/pom.xml
@@ -78,9 +78,9 @@
             <version>${commons.validator.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.owasp.esapi</groupId>
-            <artifactId>esapi</artifactId>
-            <version>${esapi.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang.version}</version>
         </dependency>
         <!--
         <dependency>
