--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>wss4j-ws-security-dom</artifactId>
             <version>${wss4j.version}</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk15on</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
