Adding a test to show how to federate "unknown" subjects in the local STS

--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -36,6 +36,7 @@
         <module>oidcIdpWebapp</module>
         <module>wsfed</module>
         <module>samlsso</module>
+        <module>unknown-subject</module>
     </modules>
 
 </project>
