Removing PermGen stuff

--- a/systests/ldap/pom.xml
+++ b/systests/ldap/pom.xml
@@ -240,8 +240,7 @@
                             <includes>
                                 <include>**/systests/**</include>
                             </includes>
-                            <argLine>-Xms512m -Xmx1024m
-                                -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xms512m -Xmx1024m</argLine>
                         </configuration>
                     </execution>
                     <execution>
