--- a/systests/tomcat8/pom.xml
+++ b/systests/tomcat8/pom.xml
@@ -192,8 +192,8 @@
                             <includes>
                                 <include>**/systests/**</include>
                             </includes>
-                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m </argLine>
-                            <!--argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</argLine-->
+                            <argLine>-Xms512m -Xmx1024m</argLine>
+                            <!--argLine>-Xms512m -Xmx1024m -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</argLine-->
                         </configuration>
                     </execution>
                     <execution>
