Exclude newer woodstox version

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <tomcat7.version>7.0.82</tomcat7.version>
         <tomcat8.version>8.5.23</tomcat8.version>
+        <woodstox.core.version>4.4.1</woodstox.core.version>
         <wss4j.version>2.1.12</wss4j.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
